packages/example/content/essentials-core/7.5.1/extending/07.management-apis.md
---
title: Management APIs
index: 07
---

# Management APIs

Access to the API endpoints is governed by a feature flag during installation of the platform.

To use these APIs, you must also have an authorization token in the header of the request. To obtain the access token, core platform admins can create one via the following steps:

1. Navigate to Admin > Service Tokens.
2. Click **Create Token** (top right corner).
3. Select the scope of the platform or service depending on API being used.

4. (optionally) Select an expiry date for the token.

This will generate a unique token for you to access Core Platform Management APIs.

## Endpoints

_________________

### Create team and invite users

Create a team and invite users. The Team Owners specified on the request must have at least one record and must already be a user of the platform.

```
POST /apis/v1/teams
```

#### Consumes

- `application/json`

#### Produces

- `*/*`

#### Parameters

| Type | Name | Description | Schema |
| --- | --- | --- | --- |
| Body | `request` <br>_required_ | request | [TeamCreateRequest](#teamcreaterequest) |

#### Headers

| Key | Value | Description |
| --- | --- | --- |
| `x-access-token` | <token> | Access token generated in the Admin Service Tokens page |

#### Responses

| HTTP Code | Description  | Schema |
| --- | --- | --- |
| 200   | OK | [TeamCreateResponse](#teamcreateresponse) |
| 400   | Bad Request | [Standard Error Response](#errorresponse) | Check error message and code for validation errors. Refer to [Management API Error Codes](#errorcodelist)
| 401   | Unauthorized | [Standard Error Response](#errorresponse) |
| 403   | Forbidden | [Standard Error Response](#errorresponse) |
| 422   | Unprocessible | [Standard Error Response](#errorresponse) |
| 503   | Service Unavailable | Check message. This could be due to the rate limit having been exceed. |

#### Limits

| Type | Description | Default |
| --- | --- | --- |
| Connections | Number of concurrent connections allowed from a single IP address | 3 |
| Requests Per Minute (rpm) | Number of requests accepted from a given IP each minute | 10 |
| Users | Number of users requested to be invited to team. | 100 |

*Reference*: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#rate-limiting

## Model definitions

<a name="definitions"></a>

### Create team request

<a name="teamcreaterequest"></a>

| Name | Schema | Validation |
| --- | --- | --- |
| `name` <br>_required_ | string | Team name must be unique to platform, consist only of ASCII alphanumeric and space characters, and have a length of between 4 and 80 characters, inclusive. |
| `privateTeam` <br>_optional_ | boolean |
| `owners` <br>_required_ | [Users Array](#users) | Owners must be registered on the platform |
| `reason` <br>_optional_ | string | |
| `labels` <br>_optional_ | [Labels Array](#metadata) | An instance of the platform may dictate required labels such as Organization. These will be enabled specifically in your platforms Admin > Settings |
| `users` <br>_optional_ | [Users Array](#users) | Maximum of 100 users can be invited upon team creation |
| `redirectConfig` <br>_optional_ | [Redirect Config Object](#redirect_config) | |


#### Sample Payload

```json
{
    "name":"",
    "reason":"",
    "privateTeam" : false,
    "owners":[
      {
         "email":"user1@example.com",
         "name":"Example Owner 1"
      }
   ],
    "users":[
      {
         "email":"user2@example.com",
         "name":"Example User 2"
      },
      {
         "email":"user3@example.com",
         "name":"Example User 3"
      }
   ],
    "labels":[
        {
            "key" : "Organization",
            "value" : "IBM"
        },
        {
            "key" : "Project",
            "value" : "Essentials"
        }
    ],
    "redirectConfig":{
        "attributes":[
            "attribute-1"
        ],
        "bundles":[
            "bundle-1"
        ],
        "categories":[
            "category-1"
        ]
    }
}
```

### Create Team Response

<a name="teamcreateresponse"></a>

| Name | Schema |
| --- | --- |
| `id` <br> | string |
| `name` <br> | string |
| `catalogRedirect` <br> | string |
| `launchpadRedirect` <br> | string |
| `summaryRedirect` <br> | string |

#### Sample payload

```json
{
    "id":"",
    "name":"",
    "catalogRedirect":"/catalog?bundles=bundle-1&attributes=attribute-1&categories=category-1&quickAdd=true&teamId=5e8759cfb40af00001fca4c4",
    "launchpadRedirect":"/teams/5e8759cfb40af00001fca4c4",
    "summaryRedirect":"/teams/5e8759cfb40af00001fca4c4?summary=true&catalogQuery=bundles%3Dbundle-1%26attributes%3Dattribute-1%26categories%3Dcategory-1%26quickAdd%3Dtrue"
}
```

### Invite users to existing team

Invite users to an existing team.

```
PUT /apis/v1/teams
```

#### Consumes

- `application/json`

#### Produces

- `*/*`

#### Parameters

| Type | Name | Description | Schema |
| --- | --- | --- | --- |
| Body | `request` <br>_required_ | request | [JoinTeamRequest](#jointeamrequest) |

#### Headers

| Key | Value | Description |
| --- | --- | --- |
| `x-access-token` | <token> | Access token generated in the Admin Service Tokens screen |

#### Responses

| HTTP Code | Description  | Schema |
| --- | --- | --- |
| 200   | OK | [List<UsersResponse>](#userresponse) |
| 400   | Bad Request | [Standard Error Response](#errorresponse) | Check error message and code for validation errors. Refer to [Management API Error Codes](#errorcodelist)
| 401   | Unauthorized | [Standard Error Response](#errorresponse) |
| 403   | Forbidden | [Standard Error Response](#errorresponse) |
| 422   | Unprocessible | [Standard Error Response](#errorresponse) |
| 503   | Service Unavailable | Check message. This could be due to the rate limit having been exceed. |

#### Limits

| Type | Description | Default |
| --- | --- | --- |
| Connections | Number of concurrent connections allowed from a single IP address | 3 |
| Requests Per Minute (rpm) | Number of requests accepted from a given IP each minute | 10 |
| Users | Number of users requested to be invited to team. | 100 |

*Reference*: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#rate-limiting

## Model definitions

<a name="definitions"></a>

### Join team request

<a name="jointeamrequest"></a>

| Name | Schema | Validation |
| --- | --- | --- |
| `id` <br>_required_ | string | ID of team for users to join. |
| `users` <br>_optional_ | [Users Array](#users) | Maximum of 100 users can be invited |


#### Sample Payload

```json
{
    "id":"5e8759cfb40af00001fca4c4",
    "users":[
        {
            "email":"user4@example.com",
            "name":"Example User 4"
        },
        {
            "email":"user5@example.com",
            "name":"Example User 5"
        }
    ]
}
```

### Join Team Response

<a name="userresponse"></a>

| Name | Schema |
| --- | --- |
| `name` <br> | string |
| `email` <br> | string |
| `message` <br> | string |

#### Sample Payload

```json
[
    {
        "email":"user4@example.com",
        "name":"Example User 4"
        "message": "User invited to team"
    },
    {
        "email":"user5@example.com",
        "name":"Example User 5"
        "message": "User invited to team"
    }
]
```

### Standard Error Response


<a name="errorresponse"></a>

| Name | Schema |
| --- | --- |
| `error` | [Error Object](#error) |


#### Sample error response payload

The following is an example of a bad request response.

```json
{
    "error": {
        "code": 1000,
        "description": "INVALID_TEAM_NAME",
        "message": "Team name must be unique to platform, consist only of ASCII alphanumeric and space characters, and have a length of between 4 and 80 characters, inclusive. "
    }
}
```

### Data objects

#### Users

<a name="users"></a>
_Type_ : object

| Name | Schema |
| --- | --- |
| `name` <br>_required_ | string |
| `email` <br>_required_ | string |

#### Labels

<a name="labels"></a>
_Type_ : object

| Name | Schema |
| --- | --- |
| `key` <br>_required_ | string |
| `value` <br>_required_ | string |

#### Redirect Config

<a name="redirect_config"></a>
_Type_ : object

| Name | Schema |
| --- | --- |
| `attributes` <br>_optional_ | string array[] |
| `bundles` <br>_optional_ | string array[] |
| `categories` <br>_optional_ | string array[] |

#### Error


<a name="error"></a>
_Type_ : object


| Name | Schema |
| --- | --- |
| `code` <br>_required_ | integer |
| `description` <br>_required_ | string |
| `message` <br>_required_ | string |


## Management API error codes

<a name="errorcodelist"></a>

| Error Code | Message |
| --- | --- |
| **1000_INVALID_TEAM_NAME** | Team name must be unique to platform, consist only of ASCII alphanumeric and space characters, and have a length of between 4 and 80 characters, inclusive. |
| **1001_TEAM_ALREADY_EXISTS** | Team already exists |
| **1002_TEAM_SIZE_EXCEEDS_LIMIT** | Requested number of users exceeds maximum size of 100 |
| **1003_INVALID_TEAM_REASON** | Create Team reason must be 200 characters or less. |
| **1004_REQUIRED_TEAM_LABELS** | Platform has required team labels that have not been provided. |
| **1005_INVALID_TEAM_OWNER** | Team owner must be an existing member of the platform. |
| **1006_REQUIRED_TEAM_LABELS_ORGANIZATION** | Organization labels are required for teams and as such must be provided. |

_________________

### Team Member Listing

Retrieve a list of team members for each team that has access to a given catalog instance.

A maxinmum of 10 teams will be returned at a time.

#### Endpoint
```
GET /apis/v1/catalog-teams?limit=10&page1
```

#### Produces

- `application/json`

#### Sample Team Member Listing Response

```json
{
    "totalPages": 118,
    "totalElements": 1177,
    "last": false,
    "first": true,
    "numberOfElements": 10,
    "size": 10,
    "number": 0,
    "records": [
        {
            "teamId": "12345",
            "teamName": "Demo Team",
            "settings" : [
                {
                    "key" : "Organization",
                    "value" : "IBM"
                }
            ],
            "catalogServices": [
                {
                    "catalogInstanceId": "12345",
                    "members": [
                        {
                            "userId": "12345",
                            "userEmail": "example@example.com",
                            "roles": [
                                "approver",
                                "lead"
                            ]
                        }
                    ]
                }
            ]
        }
    ]
}
```

### Parameters

| Type | Name | Description |
| --- | --- | --- |
| Query Param  | limit  | The number of results to be returned per page |
| Query Param  | page | The page number to return |


### Headers

| Key  | Value  | Description  |
| --- | --- | --- |
| `x-access-token`  | `token_value` | Access token generated in the Admin Service Tokens page of scope type _Core_ and with the corresponding catalog service. |

### Responses

| HTTP Code | Description  | Schema |
| --- | --- | --- |
| 200   | OK | [Team Member Listing Response](#catalogteamresponse) |
| 400   | Bad Request | [Standard Error Response](#errorresponse) | Check error message and code for validation errors. Refer to [Management API Error Codes](#errorcodelist)
| 401   | Unauthorized | [Standard Error Response](#errorresponse) |
| 403   | Forbidden | [Standard Error Response](#errorresponse) |
| 422   | Unprocessible | [Standard Error Response](#errorresponse) |
| 503   | Service Unavailable | Check message. This could be due to the rate limit having been exceed. |


### Model definitions
<a name="team-listing-definitions"></a>

### Team Member Listing Response

<a name="catalogteamresponse"></a>

| Name | Schema |
| --- | --- |
| `totalPages` <br> | integer |
| `totalElements` <br> | integer |
| `last` <br> | boolean |
| `first` <br> | boolean |
| `numberOfElements` <br> | integer |
| `size` <br> | integer |
| `number` <br> | integer |
| `records` <br> | array ([Team Summary Model](#teamsummaryresponse))|

### Team Summary Model

<a name="teamsummaryresponse"></a>

|  Name  | Schema  |
| --- | --- |
| `teamId ` <br> | string |
| `teamName ` <br> | string |
| `settings` <br> |  array ([Team Member Model](#teamsettingmodel)) |
| `catalogServices` <br> |  array ([Catalog Service Model](#catalogservicemodel)) |

### Catalog Service Model

<a name="catalogservicemodel"></a>

|  Name  | Schema  |
| --- | --- |
| `catalogInstanceId ` <br> | string |
| `members` <br> |  array ([Team Member Model](#teammemberresponse)) |

### Team Member Model

<a name="teamsettingmodel"></a>

|  Name  | Schema  |
| --- | --- |
| `userId ` <br> | string |
| `userEmail ` <br> | string |
| `roles` <br> | array (string) |

### Team Setting Model

<a name="teamsettingmodel"></a>

|  Name  | Schema  |
| --- | --- |
| `key ` <br> | string |
| `value ` <br> | string |
| `label ` <br> | string |


_________________

### User Role Query

Retrieve a list of user roles for a given catalog instance using an email address. The team name is an optional parameter to filter results to get a user's role for a catalog instance belonging to a single team. Otherwise, if the team name is not specified, all teams will be returned.

The scope of the x-access-token  is tied to a single service so this end point will only return roles associated with the service.

An HTTP 404 error will be returned if the user does not have access to the specified team and service.

A user may have multiple instances of a catalog service on their team which is returned on the user role query response.

#### Endpoint
```
GET /apis/v1/user-roles?userEmail=&teamName=

```

#### Produces

- `application/json`

#### Parameters

| Type  | Name  | Description  |
| --- | --- | --- |
| Query Param  | userEmail  | _required_ |
| Query Param  |  teamName | _optional_ |

#### Headers

| Key  | Value  | Description  |
| --- | --- | --- |
| `x-access-token`  | `token_value` | Access token generated in the Admin Service Tokens page of scope type _Core_ and with the corresponding catalog service. |

#### Responses

|  HTTP Code  | Description  | Schema  | Notes  |
| --- | --- | --- | --- |
| 200 | OK | [UserRoleResponse](#userroleresponse) | |
| 400 | Bad Request | [Standard Error Response](#errorresponse) | Check error message and code for validation errors. Refer to [Management API Error Codes](#errorcodelist)
| 401 | Unauthorized | [Standard Error Response](#errorresponse) | |
| 403 | Forbidden | [Standard Error Response](#errorresponse) | |
| 404 | Not Found | [Standard Error Response](#errorresponse) | |
| 422 | Unprocessible | [Standard Error Response](#errorresponse) | |
| 503 | Service Unavailable | Check message. This could be due to the rate limit having been exceed. |  |

#### Limits

|  Type  | Description  | Default  |
| --- | --- | --- |
| Connections | Number of concurrent connections allowed from a single IP address | 10 |

_Connections and rating limiting to be documented_

*Reference*: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#rate-limiting

## Model definitions

<a name="definitions"></a>

### User Role Response

<a name="userroleresponse"></a>

|  Name  | Schema  |
| --- | --- |
| `name` <br> | string |
| `userEmail` <br> | string |
| `teamName` <br> | string |
| `serviceName` <br> | string |
| `settings` <br> |  array ([Team Member Model](#teamsettingmodel)) |
| `services` <br> | [Service Role Object](#serviceroleresponse)|

#### Sample User Role Query Response

Single team returned when team name query name is provided.

```json
{
   "name":"Example Example",
   "userEmail":"example@example.com",
   "teamName":"Demo Team",
   "serviceName":"Boomerang CICD",
   "settings" : [
   {
      "key" : "Organization",
       "value" : "IBM"
   }
   ],
   "services":[
      {
         "catalogInstanceId":"12345",
         "roles":[
            "approver",
            "lead"
         ]
      }
   ]
}
```

When no team is provided. multiple teams will be returned.

```json
[{
   "name":"Example Example",
   "userEmail":"example@example.com",
   "teamName":"Demo Team",
   "serviceName":"Boomerang CICD",
   "settings" : [
   {
      "key" : "Organization",
      "value" : "IBM"
   }
   "services":[
      {
         "catalogInstanceId":"12345",
         "roles":[
            "approver",
            "lead"
         ]
      }
   ]
},
{
   "name":"Example Example",
   "userEmail":"example@example.com",
   "teamName":"Client Team",
   "serviceName":"Boomerang CICD",
   "settings" : [
   {
      "key" : "Organization",
      "value" : "IBM"
   },
   "services":[
      {
         "catalogInstanceId":"654321",
         "roles":[
            "lead"
         ]
      }
   ]
}]
```
### Service Role Object

<a name="serviceroleresponse"></a>

|  Name  | Schema  |
| --- | --- |
| `catalogInstanceId` <br> | string |
| `roles` <br> | array (string) |
